sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value getnombreValeurs
    for (x <- 0 to getnombreValeurs()-1){
                   ^AlgBubbleSort1:7: error: not found: value i
    if (plusPetit(i,i+1))
                  ^AlgBubbleSort1:7: error: not found: value i
    if (plusPetit(i,i+1))
                    ^AlgBubbleSort1:9: error: not found: value i
      echange(i,i+1)
              ^AlgBubbleSort1:9: error: not found: value i
      echange(i,i+1)
                ^